--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
-    
-    <Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </Toolbar>
 
 
     <TextView
@@ -19,10 +14,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_mail2"
         android:id="@+id/textView16"
-        android:paddingTop="10dp"
         android:padding="5dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_alignRight="@+id/editText10"
         android:layout_alignEnd="@+id/editText10"
         android:layout_alignLeft="@+id/editText10"
@@ -62,7 +56,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign in"
+        android:text="@string/signIn"
         android:background="#cf4848"
         android:id="@+id/btn_signIn"
         android:layout_below="@+id/editText11"
