--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -6,60 +6,25 @@
     android:id="@+id/map"
     tools:context="com.jshikami235gmail.pataride.MapsActivity"
     android:name="com.google.android.gms.maps.SupportMapFragment"
-    tools:layout="@layout/abc_screen_simple" >
+    tools:layout="@layout/abc_screen_simple">
     
     <Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/mapFragment">
     </Toolbar>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_location"
-        android:id="@+id/textView6"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingTop="20dp"
-        android:layout_marginLeft="20dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:inputType="textAutoComplete"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_toRightOf="@+id/textView7"
-        android:layout_toEndOf="@+id/textView7"
-        android:layout_marginRight="20dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_dest"
         android:id="@+id/textView7"
-        android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="5dp"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText6"
-        android:inputType="textAutoComplete"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignLeft="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_alignRight="@+id/editText5"
-        android:layout_alignEnd="@+id/editText5" />
+        android:layout_marginTop="52dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
 
     <!-- MapView Fragment -->
@@ -70,22 +35,58 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
             tools:layout="@layout/abc_screen_simple"
-        android:layout_below="@+id/editText6"
-        android:layout_above="@+id/btn_ride" />
+        android:layout_above="@+id/btn_ride"
+        android:layout_below="@+id/editText12"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn3"
         android:textColor="#fff"
-        android:id="@+id/btn_ride"
         android:background="#cf4848"
-        android:layout_marginBottom="20dp"
+        android:id="@+id/btn_ride"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/editText6"
-        android:layout_alignEnd="@+id/editText6"
+        android:layout_alignRight="@+id/mapFragment"
+        android:layout_alignEnd="@+id/mapFragment"
         android:layout_alignLeft="@+id/textView7"
         android:layout_alignStart="@+id/textView7" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText12"
+        android:paddingTop="0dp"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_alignRight="@+id/mapFragment"
+        android:layout_alignEnd="@+id/mapFragment"
+        android:inputType="text"
+        android:layout_toRightOf="@+id/textView7"
+        android:layout_toEndOf="@+id/textView7" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location"
+        android:layout_marginBottom="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_above="@+id/editText12"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignStart="@+id/textView7" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView8"
+        android:layout_alignRight="@+id/mapFragment"
+        android:layout_alignEnd="@+id/mapFragment"
+        android:inputType="text"
+        android:layout_alignLeft="@+id/editText12"
+        android:layout_alignStart="@+id/editText12" />
 
 
 </RelativeLayout>
