--- a/app/src/main/res/layout-v21/activity_sign_up.xml
+++ b/app/src/main/res/layout-v21/activity_sign_up.xml
@@ -6,10 +6,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.jshikami235gmail.pataride.Sign_up">
-    
-    <Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></Toolbar>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -30,30 +26,29 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
         android:layout_marginLeft="15dp" />
 
     <EditText
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text="@string/tv_Name"
-        android:ems="10"
+        android:ems="8"
         android:id="@+id/editText"
         android:layout_alignTop="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="49dp"
-        android:layout_marginEnd="49dp"
         android:layout_marginBottom="30dp"
+        android:layout_marginRight="15dp"
         android:layout_width="wrap_content"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_alignRight="@+id/fab"
+        android:layout_alignEnd="@+id/fab" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_ln"
+        android:layout_marginTop="15dp"
         android:id="@+id/textView3"
         android:layout_gravity="center_vertical"
         android:layout_below="@+id/editText"
@@ -68,22 +63,21 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text="@string/tv_Name2"
-        android:ems="10"
+        android:ems="8"
+        android:layout_marginTop="15dp"
         android:id="@+id/editText2"
         android:layout_below="@+id/editText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="49dp"
-        android:layout_marginEnd="49dp"
         android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_alignStart="@+id/editText"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_pwd"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:id="@+id/textView4"
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
@@ -95,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:ems="10"
+        android:ems="8"
         android:id="@+id/editText4"
         android:layout_alignTop="@+id/textView4"
         android:layout_alignRight="@+id/editText2"
@@ -110,11 +104,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/email"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="45dp"
         android:id="@+id/textView5"
         android:layout_below="@+id/editText4"
-        android:layout_alignRight="@+id/textView4"
-        android:layout_alignEnd="@+id/textView4"
         android:layout_alignLeft="@+id/textView4"
         android:layout_alignStart="@+id/textView4" />
 
@@ -123,13 +115,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="10"
+        android:ems="8"
         android:id="@+id/editText3"
-        android:layout_alignTop="@+id/textView5"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignLeft="@+id/editText4"
+        android:layout_alignStart="@+id/editText4"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_alignEnd="@+id/editText4" />
 
 
     <Button
@@ -138,11 +130,11 @@
         android:text="@string/btn_signUp"
         android:id="@+id/btn_signUp"
         android:background="#cf4848"
+        android:textColor="#ffffff"
         android:layout_below="@+id/textView5"
-        android:layout_marginTop="45dp"
-        android:textColor="#fff"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
+        android:layout_marginTop="47dp"
         android:layout_alignRight="@+id/editText3"
         android:layout_alignEnd="@+id/editText3" />
 
