--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,6 +8,11 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     tools:layout="@layout/abc_screen_simple" >
 
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </Toolbar>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,13 +54,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText6"
-        android:layout_alignTop="@+id/textView7"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:inputType="textAutoComplete"
-        android:layout_toRightOf="@+id/textView7"
-        android:layout_toEndOf="@+id/textView7"
-        android:layout_marginRight="20dp" />
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignLeft="@+id/editText5"
+        android:layout_alignStart="@+id/editText5"
+        android:layout_alignRight="@+id/editText5"
+        android:layout_alignEnd="@+id/editText5" />
 
 
     <!-- MapView Fragment -->
@@ -63,15 +67,17 @@
     <fragment
         android:id="@+id/mapFragment"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-            tools:layout="@layout/abc_screen_simple" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+            tools:layout="@layout/abc_screen_simple"
+        android:layout_below="@+id/editText6"
+        android:layout_above="@+id/btn_ride" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn3"
-        android:textColor="#fff"
+        android:textColor="#ffffff"
         android:id="@+id/btn_ride"
         android:background="#cf4848"
         android:layout_marginBottom="20dp"
