--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,8 +10,7 @@
 
     <Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </Toolbar>
+        android:layout_height="match_parent" />
 
     <TextView
         android:layout_width="wrap_content"
