--- a/app/src/main/res/layout-v21/activity_pay.xml
+++ b/app/src/main/res/layout-v21/activity_pay.xml
@@ -13,6 +13,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_string"
         android:id="@+id/textView8"
+        android:textColor="#6c6c6c"
         android:padding="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/radioButton"
@@ -53,6 +54,7 @@
         android:text="@string/tv_pay"
         android:id="@+id/textView9"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/radioButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_no"
+        android:textColor="#6c6c6c"
         android:id="@+id/textView10"
         android:layout_alignTop="@+id/textView9"
         android:layout_alignRight="@+id/radioButton2"
@@ -76,6 +79,7 @@
         android:text="@string/tv_ac"
         android:id="@+id/textView11"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -87,6 +91,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_pr"
         android:id="@+id/textView12"
+        android:textColor="#6c6c6c"
         android:layout_alignTop="@+id/textView11"
         android:layout_alignRight="@+id/textView10"
         android:layout_alignEnd="@+id/textView10" />
@@ -98,6 +103,7 @@
         android:text="@string/tv_amnt"
         android:id="@+id/textView13"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/textView11"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -124,7 +130,8 @@
         android:layout_marginTop="45dp"
         android:layout_alignRight="@+id/editText7"
         android:layout_alignEnd="@+id/editText7"
-        android:background="#cf4848"
+        android:background="#d15351"
+        android:textColor="#fff"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="20dp" />
