--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:text="@string/btn1"
         android:id="@+id/btn_login"
         android:textColor="#fff"
-        android:background="#cf4848"
+        android:background="#d15351"
         android:layout_marginBottom="73dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -29,7 +29,7 @@
         android:text="@string/btn2"
         android:id="@+id/btn_signUp"
         android:textColor="#fff"
-        android:background="#cf4848"
+        android:background="#d15351"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_centerVertical="true"
