--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,6 +18,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_location"
         android:id="@+id/textView6"
+        android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -42,6 +43,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tv_dest"
         android:id="@+id/textView7"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -78,7 +80,7 @@
         android:text="@string/btn3"
         android:textColor="#ffffff"
         android:id="@+id/btn_ride"
-        android:background="#cf4848"
+        android:background="#d15351"
         android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/editText6"
