--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -10,10 +10,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_string"
         android:id="@+id/textView8"
         android:padding="10dp"
+        android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/radioButton"
         android:layout_alignStart="@+id/radioButton"
@@ -49,10 +50,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_pay"
         android:id="@+id/textView9"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/radioButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -62,9 +64,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_no"
         android:id="@+id/textView10"
+        android:textColor="#6c6c6c"
         android:layout_alignTop="@+id/textView9"
         android:layout_alignRight="@+id/radioButton2"
         android:layout_alignEnd="@+id/radioButton2" />
@@ -72,10 +75,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_ac"
         android:id="@+id/textView11"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -84,9 +88,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_pr"
         android:id="@+id/textView12"
+        android:textColor="#6c6c6c"
         android:layout_alignTop="@+id/textView11"
         android:layout_alignRight="@+id/textView10"
         android:layout_alignEnd="@+id/textView10" />
@@ -94,10 +99,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_amnt"
         android:id="@+id/textView13"
         android:paddingLeft="15dp"
+        android:textColor="#6c6c6c"
         android:layout_below="@+id/textView11"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -124,7 +130,7 @@
         android:layout_marginTop="45dp"
         android:layout_alignRight="@+id/editText7"
         android:layout_alignEnd="@+id/editText7"
-        android:background="#cf4848"
+        android:background="#d15351"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="20dp" />
