--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -17,30 +17,30 @@
         android:padding="5dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="60dp"
-        android:layout_alignRight="@+id/editText10"
-        android:layout_alignEnd="@+id/editText10"
-        android:layout_alignLeft="@+id/editText10"
-        android:layout_alignStart="@+id/editText10" />
+        android:layout_alignRight="@+id/email_1"
+        android:layout_alignEnd="@+id/email_1"
+        android:layout_alignLeft="@+id/email_1"
+        android:layout_alignStart="@+id/email_1" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText10"
+        android:id="@+id/email_1"
         android:layout_below="@+id/textView16"
-        android:layout_alignLeft="@+id/editText11"
-        android:layout_alignStart="@+id/editText11" />
+        android:layout_alignLeft="@+id/pwd_1"
+        android:layout_alignStart="@+id/pwd_1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Password"
+        android:text="@string/tv_pwd_1"
         android:id="@+id/textView17"
         android:padding="5dp"
         android:layout_marginTop="30dp"
-        android:layout_below="@+id/editText10"
+        android:layout_below="@+id/email_1"
         android:layout_alignLeft="@+id/textView16"
         android:layout_alignStart="@+id/textView16" />
 
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText11"
+        android:id="@+id/pwd_1"
         android:layout_below="@+id/textView17"
         android:layout_centerHorizontal="true" />
 
@@ -59,10 +59,10 @@
         android:text="@string/signIn"
         android:background="#cf4848"
         android:id="@+id/btn_signIn"
-        android:layout_below="@+id/editText11"
-        android:layout_alignLeft="@+id/editText11"
-        android:layout_alignStart="@+id/editText11"
+        android:layout_below="@+id/pwd_1"
+        android:layout_alignLeft="@+id/pwd_1"
+        android:layout_alignStart="@+id/pwd_1"
         android:layout_marginTop="53dp"
-        android:layout_alignRight="@+id/editText11"
-        android:layout_alignEnd="@+id/editText11" />
+        android:layout_alignRight="@+id/pwd_1"
+        android:layout_alignEnd="@+id/pwd_1" />
 </RelativeLayout>
