--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_dest"
+        android:textColor="#6c6c6c"
         android:id="@+id/textView7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -46,7 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/btn3"
         android:textColor="#fff"
-        android:background="#cf4848"
+        android:background="#d15351"
         android:id="@+id/btn_ride"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
@@ -72,21 +73,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location"
+        android:textColor="#6c6c6c"
         android:layout_marginBottom="8dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_above="@+id/editText12"
         android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7" />
+        android:layout_alignStart="@+id/textView7"
+        android:id="@+id/textView2" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView8"
-        android:layout_alignRight="@+id/mapFragment"
-        android:layout_alignEnd="@+id/mapFragment"
         android:inputType="text"
-        android:layout_alignLeft="@+id/editText12"
-        android:layout_alignStart="@+id/editText12" />
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_toRightOf="@+id/textView7"
+        android:layout_alignRight="@+id/editText12"
+        android:layout_alignEnd="@+id/editText12" />
 
 
 </RelativeLayout>
