--- a/app/src/main/res/layout-v21/activity_sign_up.xml
+++ b/app/src/main/res/layout-v21/activity_sign_up.xml
@@ -7,136 +7,114 @@
     android:fitsSystemWindows="true"
     tools:context="com.jshikami235gmail.pataride.Sign_up">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_fn"
-        android:id="@+id/textView2"
+        android:text="First name"
+        android:id="@+id/textView18"
+        android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="45dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="20dp" />
 
     <EditText
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/tv_Name"
-        android:ems="8"
-        android:id="@+id/editText"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="15dp"
         android:layout_width="wrap_content"
-        android:layout_alignRight="@+id/fab"
-        android:layout_alignEnd="@+id/fab" />
+        android:layout_height="wrap_content"
+        android:id="@+id/first_name"
+        android:layout_below="@+id/textView18"
+        android:layout_alignLeft="@+id/textView18"
+        android:layout_alignStart="@+id/textView18"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_ln"
-        android:layout_marginTop="15dp"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_vertical"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp" />
-
-
+        android:text="Second name"
+        android:id="@+id/textView19"
+        android:textColor="#6c6c6c"
+        android:layout_below="@+id/first_name"
+        android:layout_alignLeft="@+id/first_name"
+        android:layout_alignStart="@+id/first_name" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/tv_Name2"
-        android:ems="8"
-        android:layout_marginTop="15dp"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText" />
+        android:id="@+id/second_name"
+
+        android:layout_below="@+id/textView19"
+        android:layout_alignLeft="@+id/textView19"
+        android:layout_alignStart="@+id/textView19"
+        android:layout_marginBottom="15dp"
+        android:layout_alignRight="@+id/first_name"
+        android:layout_alignEnd="@+id/first_name" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_pwd"
-        android:layout_marginTop="40dp"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp" />
-
+        android:text="Email address"
+        android:id="@+id/textView20"
+        android:textColor="#6c6c6c"
+        android:layout_below="@+id/second_name"
+        android:layout_alignLeft="@+id/second_name"
+        android:layout_alignStart="@+id/second_name" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="8"
-        android:id="@+id/editText4"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2"
-        android:layout_toEndOf="@+id/textView5"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
-
+        android:id="@+id/email"
+        android:layout_below="@+id/textView20"
+        android:layout_alignLeft="@+id/textView20"
+        android:layout_alignStart="@+id/textView20"
+        android:layout_marginBottom="15dp"
+        android:layout_alignRight="@+id/first_name"
+        android:layout_alignEnd="@+id/first_name" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/email"
-        android:layout_marginTop="45dp"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/editText4"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4" />
-
+        android:text="Password"
+        android:id="@+id/textView21"
+        android:textColor="#6c6c6c"
+        android:layout_below="@+id/email"
+        android:layout_alignLeft="@+id/email"
+        android:layout_alignStart="@+id/email" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:ems="8"
-        android:id="@+id/editText3"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_alignStart="@+id/editText4"
-        android:layout_alignRight="@+id/editText4"
-        android:layout_alignEnd="@+id/editText4" />
-
+        android:ems="10"
+        android:id="@+id/password"
+        android:layout_below="@+id/textView21"
+        android:layout_alignLeft="@+id/textView21"
+        android:layout_alignStart="@+id/textView21"
+        android:layout_alignRight="@+id/first_name"
+        android:layout_alignEnd="@+id/first_name"
+        android:layout_marginBottom="10dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_signUp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/password"
+        android:background="#d15351"
+        android:text="Sign up"
+        android:textColor="#fff"
         android:id="@+id/btn_signUp"
-        android:background="#cf4848"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/textView5"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_marginTop="47dp"
-        android:layout_alignRight="@+id/editText3"
-        android:layout_alignEnd="@+id/editText3" />
-
+        android:layout_alignLeft="@+id/password"
+        android:layout_alignStart="@+id/password"
+        android:layout_alignRight="@+id/first_name"
+        android:layout_alignEnd="@+id/first_name"
+        android:layout_marginBottom="90dp" />
 
 </RelativeLayout>
