--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,22 +15,23 @@
         android:id="@+id/textView16"
         android:paddingTop="10dp"
         android:padding="5dp"
+        android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
         android:layout_marginTop="40dp"
-        android:layout_alignRight="@+id/editText10"
-        android:layout_alignEnd="@+id/editText10"
-        android:layout_alignLeft="@+id/editText10"
-        android:layout_alignStart="@+id/editText10" />
+        android:layout_alignRight="@+id/email_1"
+        android:layout_alignEnd="@+id/email_1"
+        android:layout_alignLeft="@+id/email_1"
+        android:layout_alignStart="@+id/email_1" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText10"
+        android:id="@+id/email_1"
         android:layout_below="@+id/textView16"
-        android:layout_alignLeft="@+id/editText11"
-        android:layout_alignStart="@+id/editText11" />
+        android:layout_alignLeft="@+id/pwd_1"
+        android:layout_alignStart="@+id/pwd_1" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,8 +40,9 @@
         android:text="Password"
         android:id="@+id/textView17"
         android:padding="5dp"
+        android:textColor="#6c6c6c"
         android:layout_marginTop="30dp"
-        android:layout_below="@+id/editText10"
+        android:layout_below="@+id/email_1"
         android:layout_alignLeft="@+id/textView16"
         android:layout_alignStart="@+id/textView16" />
 
@@ -49,7 +51,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText11"
+        android:id="@+id/pwd_1"
         android:layout_below="@+id/textView17"
         android:layout_centerHorizontal="true" />
 
@@ -57,12 +59,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_In"
-        android:background="#cf4848"
+        android:textColor="#fff"
+        android:background="#d15351"
         android:id="@+id/btn_signIn"
-        android:layout_below="@+id/editText11"
-        android:layout_alignLeft="@+id/editText11"
-        android:layout_alignStart="@+id/editText11"
+        android:layout_below="@+id/pwd_1"
+        android:layout_alignLeft="@+id/pwd_1"
+        android:layout_alignStart="@+id/pwd_1"
         android:layout_marginTop="53dp"
-        android:layout_alignRight="@+id/editText11"
-        android:layout_alignEnd="@+id/editText11" />
+        android:layout_alignRight="@+id/pwd_1"
+        android:layout_alignEnd="@+id/pwd_1" />
 </RelativeLayout>
