--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".Welcome">
 
 
     <EditText
@@ -13,18 +13,22 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="2dp"
         android:hint="@string/hint"
+        android:textColor="#6c6c6c"
         android:id="@+id/email_l"
         android:layout_marginTop="50dp"
-        android:layout_alignLeft="@+id/pwd_1"
-        android:layout_alignStart="@+id/pwd_1" />
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/pwd_1"
+        android:textColor="#6c6c6c"
+        android:id="@+id/pwd_l"
         android:hint="@string/pwd_hint"
         android:layout_marginTop="50dp"
         android:layout_below="@+id/email_l"
@@ -34,13 +38,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_In"
+        android:onClick="onClick"
         android:textColor="#fff"
         android:background="#d15351"
         android:id="@+id/btn_signIn"
-        android:layout_below="@+id/pwd_1"
-        android:layout_alignLeft="@+id/pwd_1"
-        android:layout_alignStart="@+id/pwd_1"
+        android:layout_below="@+id/pwd_l"
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l"
         android:layout_marginTop="53dp"
-        android:layout_alignRight="@+id/pwd_1"
-        android:layout_alignEnd="@+id/pwd_1" />
+        android:layout_alignRight="@+id/pwd_l"
+        android:layout_alignEnd="@+id/pwd_l" />
 </RelativeLayout>
