--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,25 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".Welcome">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
+        android:textColor="#6c6c6c"
         android:hint="@string/hint"
         android:id="@+id/email_1"
         android:layout_marginTop="50dp"
-        android:layout_alignLeft="@+id/pwd_1"
-        android:layout_alignStart="@+id/pwd_1" />
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/pwd_1"
+        android:textColor="#6c6c6c"
+        android:id="@+id/pwd_l"
         android:hint="@string/pwd_hint"
         android:layout_marginTop="50dp"
        android:layout_below="@+id/email_1"
@@ -33,13 +35,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_In"
+        android:onClick="onClick"
         android:textColor="#fff"
         android:background="#d15351"
         android:id="@+id/btn_signIn"
-        android:layout_below="@+id/pwd_1"
-        android:layout_alignLeft="@+id/pwd_1"
-        android:layout_alignStart="@+id/pwd_1"
+        android:layout_below="@+id/pwd_l"
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l"
         android:layout_marginTop="53dp"
-        android:layout_alignRight="@+id/pwd_1"
-        android:layout_alignEnd="@+id/pwd_1" />
+        android:layout_alignRight="@+id/pwd_l"
+        android:layout_alignEnd="@+id/pwd_l" />
 </RelativeLayout>
