--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:context=".Welcome">
 
+    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
+        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <EditText
         android:layout_width="wrap_content"
@@ -14,11 +24,10 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:layout_marginRight="40dp"
-        android:layout_marginLeft="2dp"
         android:hint="@string/hint"
         android:textColor="#6c6c6c"
         android:id="@+id/email_l"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="80dp"
         android:layout_alignLeft="@+id/pwd_l"
         android:layout_alignStart="@+id/pwd_l" />
 
