--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -14,21 +14,14 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingTop="5dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/input_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Location"
-                android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -36,12 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/input_destination"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Destination"
-                android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -54,6 +41,10 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/layout"
         tools:layout="@layout/abc_screen_simple"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true" />
 
 
@@ -67,5 +58,30 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginBottom="20dp"
         android:src="@mipmap/motorbike" />
+
+    <EditText
+        android:id="@+id/input_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Location"
+        android:layout_marginTop="10dp"
+        android:inputType="text"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/mapFragment"
+        android:layout_alignStart="@+id/mapFragment"
+        android:layout_alignRight="@+id/mapFragment"
+        android:layout_alignEnd="@+id/mapFragment" />
+
+    <EditText
+        android:id="@+id/input_destination"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Destination"
+        android:inputType="text"
+        android:layout_below="@+id/input_location"
+        android:layout_alignLeft="@+id/input_location"
+        android:layout_alignStart="@+id/input_location"
+        android:layout_alignRight="@+id/btn_ride"
+        android:layout_alignEnd="@+id/btn_ride" />
 
 </RelativeLayout>
