--- a/app/src/main/res/layout-v21/activity_pay.xml
+++ b/app/src/main/res/layout-v21/activity_pay.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
-    
-    <Toolbar
+    android:layout_height="match_parent" >
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+    </android.support.design.widget.AppBarLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_string"
         android:id="@+id/textView8"
-        android:textColor="#6c6c6c"
         android:padding="10dp"
+        android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/radioButton"
         android:layout_alignStart="@+id/radioButton"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="0dp"
         android:layout_marginBottom="20dp" />
 
     <RadioButton
@@ -28,7 +31,7 @@
         android:text="@string/radio_btn"
         android:id="@+id/radioButton"
         android:checked="true"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_below="@+id/textView8"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -45,12 +48,12 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="52dp"
         android:layout_marginEnd="52dp"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_pay"
         android:id="@+id/textView9"
         android:paddingLeft="15dp"
@@ -64,10 +67,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_no"
-        android:textColor="#6c6c6c"
         android:id="@+id/textView10"
+        android:textColor="#6c6c6c"
         android:layout_alignTop="@+id/textView9"
         android:layout_alignRight="@+id/radioButton2"
         android:layout_alignEnd="@+id/radioButton2" />
@@ -75,7 +78,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_ac"
         android:id="@+id/textView11"
         android:paddingLeft="15dp"
@@ -88,7 +91,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_pr"
         android:id="@+id/textView12"
         android:textColor="#6c6c6c"
@@ -99,7 +102,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_amnt"
         android:id="@+id/textView13"
         android:paddingLeft="15dp"
@@ -131,7 +134,6 @@
         android:layout_alignRight="@+id/editText7"
         android:layout_alignEnd="@+id/editText7"
         android:background="#d15351"
-        android:textColor="#fff"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="20dp" />
