--- a/app/src/main/res/layout/content_signup_trial.xml
+++ b/app/src/main/res/layout/content_signup_trial.xml
@@ -7,10 +7,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_signup_trial"
     tools:context="com.jshikami235gmail.pataride.SignupTrial">
@@ -21,7 +18,7 @@
         android:id="@+id/etfname"
         android:hint="@string/first_et"
         android:textColor="#6c6c6c"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="65dp"
         android:inputType="textPersonName"
         android:layout_marginLeft="50dp"
         android:layout_alignParentTop="true"
