--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -14,5 +14,6 @@
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
-       android:src="@drawable/logo1"/>
+       android:src="@drawable/logo1"
+       android:background="#fff"/>
 </RelativeLayout>
