--- a/app/src/main/res/layout/content_thanks.xml
+++ b/app/src/main/res/layout/content_thanks.xml
@@ -7,14 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jshikami235gmail.pataride.thanks">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    <android.support.design.widget.AppBarLayout
+  <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:theme="@style/AppTheme.AppBarOverlay"/>
@@ -27,7 +20,7 @@
         android:text="@string/tv_thanks"
         android:layout_alignParentTop="true"
         android:id="@+id/textView2"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="0dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -40,6 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/man"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:contentDescription="pic"
 
         android:layout_alignParentLeft="true"
